made background image stretch to fit background and fixed default settings

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     margin: 0px;
     padding: 0px;
     text-align: center;
+    background: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 div.inputBox {
